[package]
name = "serene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# interact with the aur
raur = "7.0.0"
git2 = "0.18.1"
base64 = "0.21.5"
regex = "1.10.2"

# async
tokio = { version = "1.35.0", features = ["full"]}
futures = "0.3.29"
futures-util = "0.3.29"
anyhow = "1.0.75"

# docker
bollard = "0.15.0"

# web
actix-web = "4.4.0"
actix-files = "0.6.2"