[package]
name = "serene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# interact with the aur
raur = "7.0.0"
srcinfo = "1.1.0"

# async
tokio = { version = "1.35.0", features = ["full"]}
futures = "0.3.29"
futures-util = "0.3.29"
tokio-util = { version = "0.7.10", features = ["compat"]}
anyhow = "1.0.75"

# docker
bollard = "0.15.0"
async-tar = "0.4.2"
hyper = "0.14.27"

# web
actix-web = "4.4.0"
actix-files = "0.6.2"
sha2 = "0.10.8"
base64 = "0.21.5"

# storage
serde = "1.0.193"
serde_json = "1.0.108"

# log
log = "0.4.20"
simplelog = "0.12.1"

# async
async-trait = "0.1.74"