[package]
name = "serene"
version = "0.1.0"
edition = "2021"

[dependencies]
# interact with the aur
raur = "7.0.0"
srcinfo = "1.1.0"

# async
tokio = { version = "1.35.0", features = ["full"]}
tokio-util = { version = "0.7.10", features = ["compat"]}

futures = "0.3.29"
futures-util = "0.3.29"

async-std = "1.12.0"
async-trait = "0.1.74"

# scheduling
tokio-cron-scheduler = "0.9.4"
uuid = "1.6.1"

# docker
bollard = "0.15.0"
async-tar = "0.4.2"
hyper = "0.14.27"

# web
actix-web = "4.4.0"
actix-files = "0.6.2"
sha2 = "0.10.8"
base64 = "0.21.5"

# storage
serde = "1.0.193"
serde_json = "1.0.108"
typetag = "0.2.14"
dyn-clone = "1.0.16"

# log
log = "0.4.20"
simplelog = "0.12.1"
anyhow = "1.0.75"

# config
lazy_static = "1.4.0"