[package]
name = "serene-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serene-data = { path = "../server/data" }

# serialization
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_yaml = "0.9.29"

# cli
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
whoami = "1.4.1"
anyhow = "1.0.77"
cron-descriptor = "0.1.1"

# secret
rand = "0.8.5"

# web, TODO: for some reason, when this builds with openssl (i.e. not rustls), the server does too, which causes problems with the container. WHYYY?
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "blocking", "json"] }
chrono = { version = "0.4.31", features = ["serde"] }

