[package]
name = "serene"
version = "0.0.0"
edition = "2021"

[dependencies]
serene-data = { path = "data" }

# interact with the aur
raur = { version = "7.0.0", default-features = false, features = ["async", "rustls-tls"] }
srcinfo = "1.1.0"

# async
tokio = { version = "1.35.0", features = ["full"]}
tokio-util = { version = "0.7.10", features = ["compat"]}
tokio-stream = "0.1.15"

futures = "0.3.29"
futures-util = "0.3.29"

async-std = "1.12.0"
async-trait = "0.1.74"

# scheduling
tokio-cron-scheduler = "0.9.4"
uuid = "1.6.1"
chrono = { version = "0.4.31", features = ["serde"] }

# docker
bollard = "0.15.0"
async-tar = "0.4.2"
hyper = "0.14.27"

# web
time = "0.3.35" # won't build otherwise with new toolchain
actix-web = "4.8.0"
actix-files = "0.6.2"
actix-web-lab = "0.20.2"

# storage
serde = "1.0.193"
serde_json = "1.0.108"
typetag = "0.2.14"
dyn-clone = "1.0.16"

# database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", ]}

# log
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75"

# config
lazy_static = "1.4.0"

# crypto
sequoia-openpgp = { version = "1.21.1" }
sequoia-gpg-agent = { version = "0.4.2" }