[package]
name = "serene-data"
version = "0.0.0"
edition = "2021"

[dependencies]
# serialization
serde = { version = "1.0.193", features = ["derive"]}
chrono = { version = "0.4.31", features = ["serde"] }

# secret
sha2 = "0.10.8"
base64 = "0.21.7"

# i am lazy
strum = "0.26.1"
strum_macros = "0.26.1"
